Converting Postal Zip Field from int to string

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,9 +14,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=52.179.198.213;Initial Catalog=StoreLynkDb_Prod01;User ID=draft;Password=St0refl1x123;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
-
-    //"DefaultConnection": "Data Source=104.208.233.108;Initial Catalog=StoreLynkDb_Prod01;User ID=api;Password=StoreLynk;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
+    //"DefaultConnection": "Data Source=52.179.198.213;Initial Catalog=StoreLynkDb_Prod01;User ID=draft;Password=St0refl1x123;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
+    "DefaultConnection": "Data Source=104.208.233.108;Initial Catalog=StoreLynkDb_Prod01;User ID=api;Password=StoreLynk;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
   },
   "AuthServerURL": {
     "DefaultURL": "http://mqttapi.storeflix.com"
