PrepTimer Phase-2 Changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,14 +8,17 @@
 
   "Jwt": {
     "Key": "@ntune$Pr@pT!m@r123456789$e@$ObyhUJvRfPnt9@ntune$Pr@pT!m@rObyhUJvRfPnt9",
-    "Issuer": "https://preptimer-api-dev.azurewebsites.net",
-    "Audience": "https://prep-timer-antunes.azurewebsites.net"
+    //"Issuer": "https://preptimer-api-dev.azurewebsites.net",
+    //"Audience": "https://prep-timer-antunes.azurewebsites.net",
+
+    "Issuer": "https://preptimer-api.azurewebsites.net",
+    "Audience": "https://digital.antunes.com/"
 
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=52.179.198.213;Initial Catalog=StoreLynkDb_Prod01;User ID=draft;Password=St0refl1x123;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
-    "DefaultConnection": "Data Source=104.208.233.108;Initial Catalog=StoreLynkDb_Prod01;User ID=api;Password=StoreLynk;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
+    "DefaultConnection": "Data Source=52.179.198.213;Initial Catalog=StoreLynkDb_Prod01;User ID=draft;Password=St0refl1x123;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
+    //"DefaultConnection": "Data Source=104.208.233.108;Initial Catalog=StoreLynkDb_Prod01;User ID=api;Password=StoreLynk`;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "AuthServerURL": {
     "DefaultURL": "http://mqttapi.storeflix.com"
