--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,7 @@
     "Audience": "https://digital.antunes.com/"
 
   },
+  "FrontendUrl": "https://prep-timer.azurewebsites.net/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=52.179.198.213;Initial Catalog=StoreLynkDb_Prod01;User ID=draft;Password=St0refl1x123;MultipleActiveResultSets=True;TrustServerCertificate=true;Encrypt=False"
@@ -38,6 +39,6 @@
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": "587",
     "FromEmail": "support@storeflix.com",
-    "EmailPassword": "St0refl1x123 "
+    "EmailPassword": "tdogzvogzblaxqef "
   }
 }
